--- a/src/app.css
+++ b/src/app.css
@@ -4,5 +4,15 @@
 
 body {
   margin: 0;
-  background-color: rgb(43, 2, 43);
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: rgb(43, 2, 43);
+  }
+}
+@media (prefers-color-scheme: light) {
+  body {
+    background-color: rgba(255, 255, 0, 0.336);
+  }
 }
