--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,6 @@ body {
 }
 @media (prefers-color-scheme: light) {
   body {
-    background-color: rgba(255, 255, 0, 0.336);
+    background-color: black;
   }
 }
