--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  font-size: 0.7rem;
 }
 
 @media (prefers-color-scheme: light) {
@@ -14,5 +15,11 @@ body {
 @media (prefers-color-scheme: dark) {
   body {
     background-color: black;
+  }
+}
+
+@media only screen and (min-width: 786px) {
+  body {
+    font-size: 0.5rem;
   }
 }
