--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,7 @@
 :root {
-  font-family: 'VCR_OSD', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'VCR_OSD', system-ui, -apple-system, BlinkMacSystemFont,
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 @font-face {
@@ -9,6 +11,11 @@
 
 body {
   margin: 0;
+}
+
+#app {
+  position: relative;
+  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
